# z-renderer

./: CMakeLists.txt  base.cpp  base.h  bbox.cpp  bbox.h  camera.cpp  camera.h  integrator.cpp  intersection.cpp  intersection.h  kdtree.cpp  kdtree.h  light.h  main.cpp  material.cpp  material.h  object.cpp  object.h  scene.cpp  scene.h  shape.cpp  shape.h  texture.cpp  texture.h
include/: base.h  bbox.h  integrator.h  kdtree.h  material.h  scene.h  shape.h  texture.h
src/: base.cpp  bbox.cpp  integrator.cpp  intersection.cpp  light.cpp  main.cpp  material.cpp  object.cpp  scene.cpp  shape.cpp
